2010-06-10  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: Fixed a bug which disabled delete key in win32.
	
	* ml_char.c: 'is_comb' flag check which destroys Lam Alef ligature
	  is excluded in ml_char_combine.
	  (SF Bug #3012762, Thanks to Khaled Hosny)
	
	* xwindow/version.h.in: 3.0.1 => 3.0.1 post

2010-06-07  Araki Ken  <arakiken@users.sf.net>

	* 3.0.1 released.
	  (tag "rel-3_0_1")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 3.0.1

	* configure: re-generated

2010-06-06  Araki Ken  <arakiken@users.sf.net>

	* x_win32.h: XK_Begin, XK_KP_Begin and IsKeypadKey macros are added
	  for win32.

	* etc/termcap: kh and @7 definitions are added to "xterm" and "*".

	* x_screen.c: Fixed a bug which disabled keyboard input in application
	  keypad mode.

2010-06-03  Araki Ken  <arakiken@users.sf.net>

	* x_font.c: Returned value of get_cs_info() is checked.

	* x_screen.c:
	  Modifier keys with Del/Home/End are distinguished.
	  The keypad middle key (XK_Begin, XK_KP_Begin) is mapped to ^[[E, ^[[1;5E etc.
	  (SF Bug #2818015, Thanks to Thomas Wolff)

	* x_screen.c: If Num_Lock is pressed, application keypad is ignored.
	
	* x_window.c: XK_Num_Lock is not ignored in XModifierKeymap by default.

2010-05-23  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, doc/ja/README.ja: Updated.

	* x_screen.c: The default value of button3_behavior option is changed
	  from "menu1" to "xterm".

	* x_screen.c: Release events for the wheel buttons are not reported.
	  (SF Bug #2818018, Thanks to Thomas Wolff)

2010-05-22  Araki Ken  <arakiken@users.sf.net>

	* xwindow/version.h.in: 3.0.0 post -> 3.0.1 pre

	* mc_flags.c: "Ambiguouswidth = fullwidth (UTF8 only)" checkbox
	  is added for "col_size_of_width_a" option.
	  
	* x_screen.c: "col_size_of_width_a" option is added to configuration protocol.

	* x_screen.c: Screen is redrawn in selection_cleared().

2010-05-19  Araki Ken  <arakiken@users.sf.net>
